--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,9 +1,70 @@
+@charset "UTF-8";
 /* base */
 body {
   margin: 0;
   padding: 0;
   font-size: large;
-  background-color: #e9e9e9;
+  /*background-color: rgb(233, 233, 233);*/
+  background-color: #a8b5ca;
+}
+
+/* layout */
+/* Header  Connexion*/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #091f43;
+  padding: 2rem;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.nav--img {
+  height: 80px;
+}
+
+.nav-item {
+  color: rgba(48, 128, 207, 0.8);
+  font-size: 60px;
+}
+
+/* page */
+.logo-connexion {
+  width: 40%;
+}
+
+.container--log {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 5%;
+  background-color: rgba(9, 31, 67, 0.95);
+  margin-left: 20%;
+  margin-right: 20%;
+  border-radius: 30px;
+}
+
+main {
+  position: relative;
+  top: 10px;
+  padding: 10px;
+}
+
+/* Titres */
+.title {
+  color: white;
+  font-weight: 400;
+  text-decoration: underline #d1515a;
+}
+
+label {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+  text-decoration: underline #d1515a;
 }
 
 /* Connexion*/
@@ -19,131 +80,55 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  flex-direction: column;
+  width: 80%;
 }
 
 .connexion--input {
-  padding-right: 1rem;
-}
-
-/* Inscription */
-.inscription {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  margin-top: 5%;
-}
-
-.inscription--input {
-  display: flex;
-  flex-direction: column;
-  width: 33%;
   padding: 1rem;
-}
-
-.inscription--input > input {
-  margin-top: 0.5rem;
-  height: 1.2rem;
-  border-width: 0.2rem;
-  border-color: black;
+  width: 60%;
 }
 
 .connexion--input > input {
-  border-color: black;
-  border-width: 0.2rem;
+  border-radius: 5px;
+  outline-style: none;
+  border-style: none;
 }
 
-/* Section Publication */
-.post {
+.input:focus {
+  box-shadow: 0px 0px 8px 4px rgba(19, 18, 18, 0.3);
+}
+
+/* Inscription */
+.inscription--input {
   display: flex;
   flex-direction: column;
-  border-radius: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 95%;
-  background-color: #fff;
+  padding: 1rem;
+  width: 60%;
 }
 
-#addFile {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  font-size: 14px;
+.inscription--input > input {
+  border-radius: 5px;
+  outline-style: none;
+  border-style: none;
 }
 
-.publish-button {
-  width: 15%;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  border-radius: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: rgba(48, 128, 207, 0.8);
-  font-size: 16px;
-  color: white;
+.inscription--input > input:focus {
+  border-width: 3px;
+  outline-style: none;
 }
 
-.post-content {
-  margin-top: 10px;
-  width: 30%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 100px;
-  border-radius: 30px;
-  border-color: black;
-  padding: 5px;
-}
-
-.post-title {
-  width: 30%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 20px;
-  border-radius: 30px;
-  border-color: black;
-  padding: 5px;
-}
-
-/* layout */
-/* Header */
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: white;
-}
-
-.logo {
-  height: 80px;
-}
-
-.nav-item {
-  color: rgba(48, 128, 207, 0.8);
-  font-size: 60px;
-}
-
-/* page */
 /* Page account */
 .user-container {
-  background-color: white;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
-  top: 1rem;
   width: 60%;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  background-color: #091f43;
+  border-radius: 30px;
 }
 
 .account--input {
@@ -151,7 +136,41 @@ header {
   padding: 0.5rem;
 }
 
-/* Post */
+.account--header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #091f43;
+  padding: 2rem;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.title--account {
+  font-size: 22px;
+  font-weight: 400;
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: #d1515a;
+}
+
+.info--account {
+  font-size: 18px;
+  font-weight: 400;
+  color: white;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  background-color: #091f43;
+  border-radius: 30px;
+}
+
+/* Block création publication */
 .post-header {
   margin-left: auto;
   margin-right: auto;
@@ -159,48 +178,63 @@ header {
   margin-bottom: 15px;
   font-size: 22px;
   font-weight: 400;
+  color: white;
 }
 
-p {
-  font-size: 18px;
-  font-weight: 400;
-  font-weight: 300;
-}
-
-.post-card {
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  background-color: white;
+.post--section {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  border-radius: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.post {
+  margin-top: 10px;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
+  height: 100px;
+  border-radius: 5px;
+  border-color: black;
+  padding: 5px;
+}
+.post--title {
+  height: 25px;
 }
 
-.content-post {
-  padding: 15px;
-}
-
-.content-comment {
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.comment-input {
-  background-color: #e9e9e9;
+/* compenent */
+/*Bouton principaux */
+.btn {
+  padding: 0.5rem;
+  margin-top: 15px;
+  margin-bottom: 15px;
   border-radius: 30px;
-  height: 50px;
-  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  font-size: 16px;
+  color: #091f43;
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
 }
 
+.btn--log:hover {
+  transform: scale(1.15);
+  transition-duration: 0.3s;
+}
+
+.btn--file {
+  border-radius: 5px;
+}
+
+/*Bouton principaux */
 .comment-button {
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  border: none;
 }
 
 .dropbtn {
@@ -224,10 +258,85 @@ p {
   width: 30px;
 }
 
-.content-post:hover {
-  box-shadow: 0px 0px 5px 3px rgba(255, 255, 255, 0.5);
+/*Bouton suppression compte */
+/* Post */
+p {
+  font-size: 20px;
+  font-weight: 400;
+  font-weight: 300;
+  background-color: #091f43;
 }
 
-/* compenent */
+.post-card {
+  background-color: #091f43;
+  color: honeydew;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.content--post {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+
+.content-comment {
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-input {
+  background-color: #e9e9e9;
+  border-radius: 30px;
+  height: 50px;
+  width: 80%;
+  border: none;
+  outline-style: none;
+}
+
+.info--post {
+  position: relative;
+  top: -2.5rem;
+}
+
+.user--publish {
+  position: relative;
+  top: -1rem;
+  font-size: 14px;
+}
+
+h2, .title--post {
+  font-weight: 400;
+}
+
+.btn--block {
+  z-index: 1;
+}
+
+.img--post {
+  max-width: 80%;
+}
+
+.block--comment {
+  position: relative;
+  top: -3rem;
+  padding: 15px;
+}
+
+.title--comment {
+  font-weight: 400;
+  font-size: 22px;
+}
+
+.content--comment {
+  font-size: 18px;
+  margin-top: -1rem;
+}
 
 /*# sourceMappingURL=style.css.map */
