--- a/frontend/sass/layout/_header.scss
+++ b/frontend/sass/layout/_header.scss
@@ -1,21 +1,17 @@
-/* Header */
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+/* Header  Connexion*/
+
 
 header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: rgb(9, 31, 67);
+    padding: 2rem;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
 
-.logo {
+.nav--img {
     height: 80px;
 }
 
