--- a/frontend/sass/pages/_wall.scss
+++ b/frontend/sass/pages/_wall.scss
@@ -1,4 +1,14 @@
-/* Post */ 
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(9, 31, 67);
+    border-radius: 30px;
+}
+
+/* Block création publication */ 
 
 .post-header {
     margin-left: auto;
@@ -7,70 +17,32 @@
     margin-bottom: 15px;
     font-size: 22px;
     font-weight: 400;
+    color: white
 }
 
-p {
-    font-size: 18px;
-    font-weight: 400;
-    font-weight: 300;
-}
 
-.post-card {
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    background-color: white;
+.post--section {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    border-radius: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+
+
+.post {
+    margin-top: 10px;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    height: 100px;
+    border-radius: 5px;
+    border-color: black;
+    padding: 5px;
+    &--title {
+        height: 25px;
+    }
 }
 
-.content-post {
-    padding: 15px;
-}
-
-.content-comment {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-.comment-input {
-    background-color: rgb(233, 233, 233);
-    border-radius: 30px;
-    height: 50px;
-    width: 80%;
-}
-
-.comment-button {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-}
-
-.dropbtn {
-    position: relative;
-    left: 95%;
-    top: 5%;
-    width: 30px;
-}
-
-.modifybtn {
-    position: relative;
-    left: 85%;
-    top: 5%;
-    width: 30px;
-}
-
-
-.drop-comment {
-    position: relative;
-    left: 95%;
-    top: 5%;
-    width: 30px;
-}
-.content-post:hover {
-    box-shadow: 0px 0px 5px 3px rgb(265, 265, 265, 0.5);
-}
