--- a/frontend/sass/base/_base.scss
+++ b/frontend/sass/base/_base.scss
@@ -7,8 +7,30 @@ body {
     
 }
 
+.alert {
+    background-color: #d1515a;
+    color: white;
+    border-radius: 5px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 300px;
+    padding: 15px 50px 15px 15px;
+    text-align: justify;
+}
 
+.alert.fade {
+    animation: fade 1.5s forwards;
+}
 
+@keyframes fade {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
 
-    
+.alert .fa-times {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+}
     
