--- a/frontend/sass/pages/_wall.scss
+++ b/frontend/sass/pages/_wall.scss
@@ -20,7 +20,6 @@
     color: white
 }
 
-
 .post--section {
     display: flex;
     flex-direction: column;
@@ -29,8 +28,6 @@
     margin-bottom: 20px;
 
 }
-
-
 
 .post {
     margin-top: 10px;
@@ -46,3 +43,16 @@
     }
 }
 
+/* Responsive */
+
+@media screen and (max-width: 800px){
+    .container, .user-container{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 425px){
+    .container, .user-container{
+        width: 95%;
+    }
+}
