--- a/frontend/sass/component/_card.scss
+++ b/frontend/sass/component/_card.scss
@@ -2,8 +2,6 @@
 p {
     font-size: 20px;
     font-weight: 400;
-    font-weight: 300;
-    background-color: rgb(9, 31, 67);
 }
 
 .post-card {
@@ -22,6 +20,7 @@ p {
     display: flex;
     flex-direction: column;
     padding: 15px;
+    margin-bottom: -2rem;
 }
 
 .content-comment {
@@ -84,6 +83,9 @@ p {
     margin-bottom: -1rem;
 }
 
+.input {
+    height: 20px;
+}
 /* Responsive */
 
 @media screen and (max-width: 800px){
