--- a/frontend/sass/layout/_header.scss
+++ b/frontend/sass/layout/_header.scss
@@ -16,9 +16,15 @@ header {
 .nav-item {
     color: rgb(48, 128, 207, 0.8);
     font-size: 60px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .logo-connexion {
     max-height: 100px;
     margin-right: auto;
     margin-left: auto;
+}
+
+.logo-mobile {
+    display: none;
 }
