--- a/frontend/sass/pages/_connexion.scss
+++ b/frontend/sass/pages/_connexion.scss
@@ -3,12 +3,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-top: 5%;
     background-color: rgb(9, 31, 67, 0.95);
-    margin-left: 20%;
-    margin-right: 20%;
     border-radius: 30px;
+    width: 45%;
 } 
 main {
     position: relative;
@@ -16,13 +15,34 @@ main {
     padding: 10px;
 }
 
+.container--all {
+    display: flex;
+    justify-content: space-around;
+}
 /* Titres */ 
 
 .title {
     color: rgb(255, 255, 255);
     font-weight: 400;
-    text-decoration: underline #d1515a;
+    text-align: center;
 }
+
+.title--animation {
+    border-bottom: solid 2px #d1515a;
+    height: 25px;
+    width: 200px;
+    position: absolute;
+    top: 120px;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.title--animation:hover {
+    border-bottom: solid 2px #d1515a;
+    opacity: 1;
+    transition: opacity 1s;
+}
+
 
 label {
     color: rgb(255, 255, 255);
@@ -34,15 +54,15 @@ label {
 
 /* Connexion*/ 
 
-.connexion {
-    padding-left: 5%;
-    padding-right: 5%;
+.connexion--block{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
+    flex-direction: column;
+    width: 80%;
 }
 
-.connexion--block{
+.inscription--block{
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -62,7 +82,6 @@ label {
     outline-style:none;
     border-style: none;
 }
-
 
 .input:focus {
     box-shadow: 0px 0px 8px 4px rgba(19, 18, 18, 0.3);
@@ -84,17 +103,34 @@ label {
 }
 
 .inscription--input > input:focus {
-
+    
     border-width: 3px;
     outline-style:none;
 }
 
 /* Responsive */
+@media screen and (max-width: 800px){
+    .container--all {
+        flex-direction: column;
+    }
+}
+
 
 @media screen and (max-width: 800px){
     .container--log {
         width: 80%;
         margin-right: auto;
         margin-left: auto;
+    }
+
+}
+
+@media screen and (max-width: 650px){
+    .logo-laptop {
+        display: none;
+    }
+    .logo-mobile{
+        display: block;
+        max-height: 100px;
     }
 }
